2008-05-07  Ole André Vadla Ravnås  <ole.andre.ravnas at tandberg com>

	* gst/rtp/gstrtpilbcpay.c:
	  Added missing stdlib.h include for strtol(), and made include ordering and
	  style consistent with the corresponding depayloader.

2008-05-07  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* configure.ac:
	  Error out if we don't have the required core/base versions.

2008-05-06  Sebastian Dröge  <slomo@circular-chaos.org>

	Patch by: Thijs Vermeir <thijsvermeir at gmail dot com>

	* sys/osxvideo/cocoawindow.m:
	Fix compiler warnings on PPC64. Fixes bug #499318.

2008-05-05  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Sjoerd Simons <sjoerd at luon dot net>

	* gst/rtsp/gstrtspsrc.c: (gst_rtspsrc_init), (gst_rtspsrc_open):
	Don't leak file descriptors on error. Fixes #531532.

2008-05-03  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/gconf/gstgconfaudiosrc.c: (gst_gconf_audio_src_reset),
	(gst_gconf_audio_src_change_state):
	* ext/gconf/gstgconfvideosink.c: (gst_gconf_video_sink_reset),
	(gst_gconf_video_sink_change_state):
	* ext/gconf/gstgconfvideosrc.c: (gst_gconf_video_src_reset),
	(gst_gconf_video_src_change_state):
	* ext/gconf/gstswitchsink.c: (gst_switch_sink_reset),
	(gst_switch_commit_new_kid), (gst_switch_sink_change_state):
	When we can't create a fakesink/fakesrc complain instead of unreffing
	NULL pointers and crashing later. See bug #530535.

2008-05-02  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtp/gstrtph263pdepay.c: (gst_rtp_h263p_depay_process):
	Add some more debug info and guard against small payloads.

	* gst/rtp/gstrtppcmudepay.c: (gst_rtp_pcmu_depay_process):
	Set duration on outgoing buffers because we can.

2008-05-02  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Olivier Crete <tester at tester dot ca>

	* ext/speex/gstspeexenc.c: (gst_speex_enc_sink_getcaps),
	(gst_speex_enc_init), (gst_speex_enc_chain):
	Add negotiation for the speex channels and rate. Fixes #465146.
